objects/Feature_Request_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Case1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feature Request Relationships (Case)</relationshipLabel>
        <relationshipName>Feature_Request_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feature Request Relationships</relationshipLabel>
        <relationshipName>Feature_Request_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feature Request Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case__c</columns>
        <columns>Case1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Feature Request Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Request Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>